<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.administrator.assignment2.ManagerActivity"
    android:background="#ff7bfff3">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:background="#ff71d5b7"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/topLayout"
            android:gravity="center_horizontal"
            android:paddingTop="50dp"
            android:paddingBottom="50dp"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/newTeam"
                android:id="@+id/newTeam" />

            <Space
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/space"
                android:layout_weight=".1" />

            <EditText
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:id="@+id/editTeamName"
                android:inputType="textPersonName"
                android:editable="false"
                android:layout_weight="0.39"
                android:text="Team Name" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:id="@+id/space2"
                android:layout_weight=".1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:id="@+id/addTeamButton" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bottomLayout"
            android:paddingTop="50dp"
            android:paddingBottom="50dp"
            android:weightSum="1"
            android:layout_weight="0.23"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/newPlayer"
                android:id="@+id/newPlayer" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight=".1" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/selectTeam"
                    android:id="@+id/selectTeam" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="UP"
                    android:id="@+id/upButton" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/teamNameDisplay"
                    android:gravity="center_vertical|center_horizontal" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="DOWN"
                    android:id="@+id/downButton" />

            </LinearLayout>

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_weight=".1" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="First Name"
                    android:ems="10"
                    android:id="@+id/firstName" />

                <EditText
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="Last Name"
                    android:ems="10"
                    android:id="@+id/lastName" />

                <EditText
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/playerNumber"
                    android:text="Player Number" />

                <EditText
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/position"
                    android:text="Position" />
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".2" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:id="@+id/addPlayerButton" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
